# trading-backtester-6

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/analysis/: __init__.py  performance_metrics.py  plotter.py
src/backtester/: __init__.py  engine.py  portfolio_manager.py  risk_manager.py
src/data/: __init__.py  data_loader.py  data_processor.py
src/strategies/: __init__.py  base_strategy.py  moving_average.py  rsi_strategy.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_backtester_engine.py  test_data_loader.py  test_strategies.py
