[project]
name = "trading-backtester"
version = "0.1.0"
description = "A Python tool to backtest stock trading strategies on historical data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "The Project Contributors" }]
keywords = ["algorithmic trading", "backtesting", "stocks", "financial data", "pandas", "numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "yfinance",
    "pandas_ta",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory
include = ["trading_backtester*"] # Assumes the main package is named 'trading_backtester'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "D100", # Missing public module docstring
    "D104", # Missing public package docstring
    "D105", # Missing public method docstring (for simple cases)
    "D107", # Missing __init__ docstring
]

[tool.mypy]
python_version = "3.9"
strict = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
addopts = "--cov=trading_backtester --cov-report=term-missing" # Assumes main package is 'trading_backtester'
testpaths = ["tests"]